[package]
name = "rmqtt-raft"
version = "0.3.0"
authors = ["rmqtt <rmqttd@126.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rmqtt/rmqtt-raft"
homepage = "https://github.com/rmqtt/rmqtt-raft"
description = "rmqtt-raft - A raft framework, for regular people"
keywords = ["raft", "distributed-systems"]
categories = ["algorithms"]
exclude = ["examples", ".gitignore", ".cargo/config"]

[dependencies]
futures = "0.3"
async-trait = "0.1"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
tikv-raft = { package = "raft", version = "0.7", features = ["protobuf-codec"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
slog = "2"
thiserror = "1.0"
tokio = { version = "1", default-features = false }
tonic = "0.8"
prost = "0.11"
protobuf = "2.28"
dashmap = "5.4"
ahash = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.8"

