[package]
name = "rmqtt-raft"
version = "0.4.4"
authors = ["rmqtt <rmqttd@126.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rmqtt/rmqtt-raft"
homepage = "https://github.com/rmqtt/rmqtt-raft"
description = "rmqtt-raft - A raft framework, for regular people"
keywords = ["raft", "distributed-systems"]
categories = ["algorithms"]
exclude = ["examples", ".gitignore", ".cargo/config"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
reuse = ["reuseport", "reuseaddr"]
reuseport = ["socket2", "tokio-stream"]
reuseaddr = ["socket2", "tokio-stream"]

[dependencies]
tikv-raft = { package = "raft", version = "0.7", features = [
    "prost-codec",
], default-features = false }
tokio = { version = "1", default-features = false, features = ["macros"] }
socket2 = { version = "0.5", features = ["all"], optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
tonic = "0.9"
prost = "0.11"
futures = "0.3"
async-trait = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
slog = "2"
thiserror = "1.0"
dashmap = "6.1"
ahash = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1.0"
once_cell = "1"
bytestring = { version = "1.3", features = ["serde"] }

[build-dependencies]
tonic-build = "0.9"
