[package]
name = "rmqttraft-warp-memstore"
version = "0.1.0"
authors = ["rmqtt-rs <rmqttd@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
bincode = "1.3"
log = "0.4"
rmqtt-raft = { path = "../../" }
serde = "1.0"
slog-async = "2"
slog-term = "2"
slog = "2"
slog-stdlog = "4"
slog-scope = "4"
structopt = "0.3"
tokio = "1"
warp = "0.3"
chrono = "0.4.19"
once_cell="1.7.2"

