[package]
name = "harness"
version = "0.1.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = []
repository = "https://github.com/pingcap/raft-rs/harness"
readme = "README.md"
homepage = "https://github.com/pingcap/raft-rs/harness"
description = "A testing harness for Raft."
categories = []
edition = "2018"

[features]
default = ["protobuf-codec", "raft/default-logger"]
protobuf-codec = ["raft/protobuf-codec"]
prost-codec = ["raft/prost-codec"]

# Make sure to synchronize updates with Raft.
[dependencies]
raft = { package = "rmqtt-raft-core", path = "..", default-features = false }
raft-proto = {package = "rmqtt-raft-proto", path = "../proto", default-features = false }
rand = "0.8"
slog = "2.2"

[dev-dependencies]
criterion = "0.3"
ahash = "0.8"
lazy_static = "1"
protobuf = "3.7.2"
regex = "1"
