[package]
name = "rmqtt-protobuf-build"
version = "0.16.0"
authors = ["Nick Cameron <nrc@ncameron.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/tikv/protobuf-build"
homepage = "https://github.com/tikv/protobuf-build"
description = "Utility functions for generating Rust code from protobufs (using protobuf-rust or Prost)"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-codegen", "protobuf-parse", "protobuf/with-bytes"]
grpcio-protobuf-codec = ["grpcio-compiler/protobuf-codec", "protobuf-codec"]
prost-codec = ["syn", "quote", "prost-build", "proc-macro2"]
grpcio-prost-codec = ["grpcio-compiler/prost-codec", "prost-codec"]

[dependencies]
proc-macro2 = { version = "1", optional = true }
protobuf = { version = "3.7.2", optional = true }
protobuf-codegen = { version = "3.7.2", optional = true }
protobuf-parse = { version = "3.7.2", optional = true }
grpcio-compiler = {package = "rmqtt-grpcio-compiler", path = "./compiler", version = "0.14", default-features = false, optional = true }
prost-build = { version = "0.11", optional = true }
regex = { version = "1.3" }
syn = { version = "1.0", features = ["full"], optional = true }
quote = { version = "1.0", optional = true }
bitflags = "1.2"

[target.'cfg(not(windows))'.dependencies]
protobuf-src = "1.1.0"

