[package]
name = "rmqtt-grpcio-compiler"
version = "0.14.1"
edition = "2018"
authors = ["The TiKV Project Developers", "rmqtt <rmqttd@126.com>"]
license = "Apache-2.0"
keywords = ["compiler", "grpc", "protobuf"]
repository = "https://github.com/rmqtt/rmqtt-raft/tree/main/raft-rs/proto/protobuf-build/compiler"
homepage = "https://github.com/rmqtt/rmqtt-raft/tree/main/raft-rs/proto/protobuf-build/compiler"
description = "gRPC compiler for grpcio"
categories = ["network-programming"]

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf"]
prost-codec = ["prost-build", "prost-types", "prost", "derive-new", "tempfile"]

[dependencies]
protobuf = { version = "3.7.2", optional = true }
prost = { version = "0.11", optional = true }
prost-build = { version = "0.11", optional = true }
prost-types = { version = "0.11", optional = true }
derive-new = { version = "0.5", optional = true }
tempfile = { version = "3.0", optional = true }

[[bin]]
name = "grpc_rust_plugin"
required-features = ["protobuf-codec"]

[[bin]]
name = "grpc_rust_prost"
required-features = ["prost-codec"]
