[package]
name = "tests"
version = "0.1.0"
authors = ["Neil Shen <overvenus@gmail.com>"]
edition = "2018"
publish = false
build = "build.rs"

[features]
protobuf-codec = ["protobuf-build/grpcio-protobuf-codec"]
prost-codec = ["protobuf-build/grpcio-prost-codec"]

[dependencies]
protobuf = "3.7.2"
prost = "0.11"
prost-derive = "0.11"
lazy_static = "1.4"

[build-dependencies]
protobuf-build = { path = "../", default-features = false }
